@@ -48,6 +48,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5290: User Cache upload contention can cause job failures (xkrogen via rohini)
+
 PIG-5293: Suspicious code as missing `this' for a member (lifove via daijy)
 
 PIG-5294: Spark unit tests are always run in spark1 mode (szita)
